<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:gravity="center"
        android:background="@drawable/cell_background_normal"
        android:layout_width="100dp"
        android:layout_height="match_parent">
        <CheckBox
            android:id="@+id/cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:background="@drawable/cell_background"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/name"
        android:padding="10dp"
        android:id="@+id/tv_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/cell_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:id="@+id/tv_email"
        android:text="@string/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/cell_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/address"

        android:id="@+id/tv_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/cell_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/phone_number"
        android:id="@+id/tv_phone_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/cell_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/birthday"
        android:id="@+id/tv_birthday"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:background="@drawable/cell_background"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/description"
        android:id="@+id/tv_description"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
</LinearLayout>