<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/cell_background_normal"
        android:gravity="center">

        <CheckBox
            android:id="@+id/cb_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_background_normal"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="@dimen/item_read_from_excel_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_background_normal"
        android:padding="10dp"
        android:text="@string/email"
        android:textSize="@dimen/item_read_from_excel_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_background_normal"
        android:padding="10dp"
        android:text="@string/address"
        android:textSize="@dimen/item_read_from_excel_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_background_normal"
        android:padding="10dp"
        android:text="@string/phone_number"
        android:textSize="@dimen/item_read_from_excel_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_birthday"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_background_normal"
        android:padding="10dp"
        android:text="@string/birthday"
        android:textSize="@dimen/item_read_from_excel_title_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_background_normal"
        android:padding="10dp"
        android:text="@string/description"
        android:textSize="@dimen/item_read_from_excel_title_size"
        android:textStyle="bold" />
</LinearLayout>